# chess-cpp

./: CMakeLists.txt  README.md  Vector2.cpp  Vector2.hpp  main.cpp
board/: Board.hpp  Pawn.hpp  Rook.hpp
movement/generators/: CompositeGenerator.hpp  Generator.hpp  RotationGenerator.hpp  SingleVectorGenerator.hpp
src/: Application.cpp  Application.hpp  GlobalResources.cpp  GlobalResources.hpp  Vector2.cpp  Vector2.hpp
src/board/: Bishop.cpp  Bishop.hpp  Board.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  NormalPawn.cpp  NormalPawn.hpp  Pawn.hpp  PlayerColor.cpp  PlayerColor.hpp  Queen.cpp  Queen.hpp  Rook.cpp
src/helpers/: RenderHelper.cpp  RenderHelper.hpp
src/movement/generators/: CompositeGenerator.hpp  Generator.hpp  RotationGenerator.hpp  SingleVectorGenerator.hpp
src/panels/: GamePanel.cpp  GamePanel.hpp  MenuPanel.cpp  MenuPanel.hpp  Panel.cpp  Panel.hpp
tests/: CMakeLists.txt  RotationGeneratorTest.h  SingleVectorGeneratorTest.h  Test.h  TestComposite.h  UnitTest.h  tests.cpp
